complete versioned edit
